--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="row gy-4 justify-content-center justify-content-lg-between">
                     <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
-                        <h1 data-aos="fade-up" id="welcomeMessage">Taste the Tradition<br>of Nyonya Kuih</h1>
+                        <h1 data-aos="fade-up" id="welcomeMessage">Taste the Tradition<br>of Nyonya Kueh</h1>
                         <p data-aos="fade-up" data-aos-delay="100">Handcrafted with heritage recipes, fresh ingredients,
                             and a passion for Malaysian culture.</p>
                         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
