fixed the duplicate js file import

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     <script src="https://cdn.jsdelivr.net/npm/purecounterjs@1.1.0/dist/purecounter_vanilla.js"></script>
     <!-- PureCounter CDN -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <!-- Main JS File - Always last -->
     <script src="assets/js/main.js"></script>
