social media plugin

--- a/product-modal.html
+++ b/product-modal.html
@@ -45,6 +45,26 @@
                                     <button type="submit" class="btn btn-primary btn-lg w-100">Add to Cart</button>
                                 </form>
                             </div>
+
+                            <!-- NEW: Social Sharing Buttons -->
+                            <div class="modal-product-share mt-4 p-3 border rounded">
+                                <h5 class="fw-bold mb-3"
+                                    style="font-family: var(--default-font); color: var(--heading-color);">Share this
+                                    Kuih:</h5>
+                                <div class="d-flex gap-2">
+                                    <button type="button" class="btn btn-primary btn-sm btn-facebook-share flex-grow-1">
+                                        <i class="bi bi-facebook me-1"></i> Facebook
+                                    </button>
+                                    <button type="button" class="btn btn-info btn-sm btn-twitter-share flex-grow-1">
+                                        <i class="bi bi-twitter-x me-1"></i> Twitter
+                                    </button>
+                                    <button type="button" class="btn btn-dark btn-sm btn-linkedin-share flex-grow-1">
+                                        <i class="bi bi-linkedin me-1"></i> LinkedIn
+                                    </button>
+                                </div>
+                            </div>
+                            <!-- END NEW: Social Sharing Buttons -->
+
                         </div>
                     </div>
                 </div>
