--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,5 @@
+--- START OF FILE footer.html ---
+
 <footer id="footer" class="footer dark-background">
 
     <div class="container">
@@ -38,10 +40,14 @@
             <div class="col-lg-3 col-md-6">
                 <h4>Follow Us</h4>
                 <div class="social-links d-flex">
-                    <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://twitter.com/kuihtradisi" class="twitter" target="_blank" rel="noopener"><i
+                            class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.facebook.com/kuihtradisi" class="facebook" target="_blank" rel="noopener"><i
+                            class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/kuihtradisi" class="instagram" target="_blank" rel="noopener"><i
+                            class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/kuihtradisi" class="linkedin" target="_blank"
+                        rel="noopener"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
 
