--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,5 @@
+--- START OF FILE menu.html ---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -257,13 +259,12 @@
 
                             <div class="col-lg-4 menu-item">
                                 <a href="#" class="product-link" data-bs-toggle="modal"
-                                    data-bs-target="#productQuickViewModal"
-                                    data-image="assets/img/menu/karipap-pusing.png" data-name="Karipap Pusing"
-                                    data-base-price="4.00"
+                                    data-bs-target="#productQuickViewModal" data-image="assets/img/menu/karipap.png"
+                                    data-name="Karipap Pusing" data-base-price="4.00"
                                     data-ingredients="Wheat flour, potatoes, chicken, curry powder, spices"
                                     data-allergens="Gluten"
                                     data-packaging='[{"option":"2 pcs/pkt","price":4.00},{"option":"6 pcs/pkt","price":18.00}]'>
-                                    <img src="assets/img/menu/karipap-pusing.png" class="menu-img img-fluid"
+                                    <img src="assets/img/menu/karipap.png" class="menu-img img-fluid"
                                         alt="Karipap Pusing">
                                     <h4>Karipap Pusing</h4>
                                     <p class="ingredients">
@@ -390,7 +391,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> <!-- jQuery first -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.css"></script>
     <script src="https://cdn.jsdelivr.net/npm/purecounterjs@1.1.0/dist/purecounter_vanilla.js"></script>
     <!-- PureCounter CDN -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
