--- a/product-modal.html
+++ b/product-modal.html
@@ -1,3 +1,5 @@
+--- START OF FILE product-modal.html ---
+
 <!-- Modal structure for product details -->
 <div class="modal fade" id="productQuickViewModal" tabindex="-1" aria-labelledby="productQuickViewModalLabel"
     aria-hidden="true">
@@ -46,20 +48,21 @@
                                 </form>
                             </div>
 
-                            <!-- NEW: Social Sharing Buttons -->
+                            <!-- NEW: Social Sharing Buttons (WhatsApp, Telegram, X) -->
                             <div class="modal-product-share mt-4 p-3 border rounded">
                                 <h5 class="fw-bold mb-3"
                                     style="font-family: var(--default-font); color: var(--heading-color);">Share this
                                     Kuih:</h5>
                                 <div class="d-flex gap-2">
-                                    <button type="button" class="btn btn-primary btn-sm btn-facebook-share flex-grow-1">
-                                        <i class="bi bi-facebook me-1"></i> Facebook
+                                    <button type="button" class="btn btn-success btn-sm btn-whatsapp-share flex-grow-1">
+                                        <i class="bi bi-whatsapp me-1"></i> WhatsApp
                                     </button>
-                                    <button type="button" class="btn btn-info btn-sm btn-twitter-share flex-grow-1">
-                                        <i class="bi bi-twitter-x me-1"></i> Twitter
+                                    <button type="button" class="btn btn-info btn-sm btn-telegram-share flex-grow-1"
+                                        style="background-color: #0088cc; border-color: #0088cc;">
+                                        <i class="bi bi-telegram me-1"></i> Telegram
                                     </button>
-                                    <button type="button" class="btn btn-dark btn-sm btn-linkedin-share flex-grow-1">
-                                        <i class="bi bi-linkedin me-1"></i> LinkedIn
+                                    <button type="button" class="btn btn-dark btn-sm btn-x-share flex-grow-1">
+                                        <i class="bi bi-twitter-x me-1"></i> X
                                     </button>
                                 </div>
                             </div>
@@ -130,5 +133,18 @@
     #modal-product-allergens.text-danger {
         color: #dc3545 !important;
         /* Ensure red for allergens */
+    }
+
+    /* Custom styles for Telegram button */
+    .btn-telegram-share {
+        background-color: #0088cc;
+        /* Telegram blue */
+        border-color: #0088cc;
+        color: #fff;
+    }
+
+    .btn-telegram-share:hover {
+        background-color: color-mix(in srgb, #0088cc, black 10%);
+        border-color: color-mix(in srgb, #0088cc, black 10%);
     }
 </style>
