google auth login & register implemented

--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,3 @@
---- START OF FILE menu.html ---
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -259,12 +257,12 @@
 
                             <div class="col-lg-4 menu-item">
                                 <a href="#" class="product-link" data-bs-toggle="modal"
-                                    data-bs-target="#productQuickViewModal" data-image="assets/img/menu/karipap.png"
+                                    data-bs-target="#productQuickViewModal" data-image="assets/img/menu/karipap.jpg"
                                     data-name="Karipap Pusing" data-base-price="4.00"
                                     data-ingredients="Wheat flour, potatoes, chicken, curry powder, spices"
                                     data-allergens="Gluten"
                                     data-packaging='[{"option":"2 pcs/pkt","price":4.00},{"option":"6 pcs/pkt","price":18.00}]'>
-                                    <img src="assets/img/menu/karipap.png" class="menu-img img-fluid"
+                                    <img src="assets/img/menu/karipap.jpg" class="menu-img img-fluid"
                                         alt="Karipap Pusing">
                                     <h4>Karipap Pusing</h4>
                                     <p class="ingredients">
@@ -279,12 +277,12 @@
                             <div class="col-lg-4 menu-item">
                                 <a href="#" class="product-link" data-bs-toggle="modal"
                                     data-bs-target="#productQuickViewModal"
-                                    data-image="assets/img/menu/pulut-panggang.png" data-name="Pulut Panggang"
+                                    data-image="assets/img/menu/pulut-panggang.jpg" data-name="Pulut Panggang"
                                     data-base-price="5.50"
                                     data-ingredients="Glutinous rice, dried shrimp sambal, coconut milk, banana leaf"
                                     data-allergens="Shellfish, coconut"
                                     data-packaging='[{"option":"2 pcs/pkt","price":5.50},{"option":"8 pcs/pkt","price":20.00}]'>
-                                    <img src="assets/img/menu/pulut-panggang.png" class="menu-img img-fluid"
+                                    <img src="assets/img/menu/pulut-panggang.jpg" class="menu-img img-fluid"
                                         alt="Pulut Panggang">
                                     <h4>Pulut Panggang</h4>
                                     <p class="ingredients">
